Fixed bug on countdown clock day alignment

--- a/src/styles/components/_Countdown.scss
+++ b/src/styles/components/_Countdown.scss
@@ -25,11 +25,10 @@
     align-self: center;
     color: #353d46;
     font-size: 1.1rem;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 1.2rem;
     background-color: rgba($color: rgb(22, 21, 21), $alpha: 1.0);
     border: $green 3px solid;
     border-radius: 4px;
-    transition: all 0.3s ease-out;
 }
 
 .clock-box-grid {
@@ -40,9 +39,14 @@
     justify-items: center;
     grid-column-gap: 30px;
     align-content: center;
-    padding: 5px 25px;
+    padding: 0px 25px;
 }
 
+.countdown-days {
+    display: flex;
+    flex-direction: row;
+}
+ 
 .clock-font {
     font-size: 0.8rem;
     color: rgb(139, 138, 138);
